# skugs

./: .coverage  .gitignore  ANNIE_0.csv  ANNIE_1.csv  ANNIE_2.csv  ANNIE_3.csv  ANNIE_4.csv  ANNIE_5.csv  ANNIE_6.csv  ANNIE_7.csv  LICENSE  README.md  fd_cleaned.csv  frame_data.csv  imgui.ini  output.csv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  setup.cfg  skombo.py  skug_stats.ipynb  skugstuff.py  stats.prof  tox.ini  type_info.json
.github/workflows/: tests.yaml
data/csvs/game_data/: SG2E - Frame Data Bot Data - Macros.csv
old_files/: parse_combo_old.py  skombo.py
py/: constants.py  damageCalc.py  damage_calc_old.py  dataclass_old.py  file_management.py  frame_data_operations.py  output.csv  parseCombo.py  skug_logger.py  skug_notebook.ipynb  skug_stats.prof  skugstuff.py  utils.py
src/skombo/: __init__.py  annie_test_combos.csv  combo.py  combo_calc.py  const.py  df_display_scratch.ipynb  fd_clean.py  fd_cleaned.csv  fd_ops.py  file_man.py  frame_data_operations.py  main.py  sklog.py  skuGUI.py  testing.ipynb  utils.py
src/skombo/logs/: ANNIE_0.csv  ANNIE_1.csv  ANNIE_2.csv  ANNIE_3.csv  ANNIE_4.csv  ANNIE_5.csv  ANNIE_6.csv  ANNIE_7.csv
src/skug_fd_parse/: combo_parse_calc.py  constants.py  file_management.py  frame_data_operations.py  main.py  skug_logger.py  stats.prof  utils.py
src/skullgirls_frame_data_parse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_combos.py  test_frame_data_operations.py  test_main.py
tests/test_data/: add_combo_to_csv.py  annie_test_combos.csv
typings/fontTools/: ttx.pyi
typings/fontTools/cffLib/: __init__.pyi  specializer.pyi
typings/fontTools/colorLib/: unbuilder.pyi
typings/fontTools/designspaceLib/: __init__.pyi
typings/fontTools/encodings/: codecs.pyi
typings/fontTools/feaLib/: ast.pyi  error.pyi
typings/fontTools/misc/: arrayTools.pyi  bezierTools.pyi  classifyTools.pyi  configTools.pyi  etree.pyi  fixedTools.pyi  intTools.pyi  loggingTools.pyi  macRes.pyi  psCharStrings.pyi  sstruct.pyi  (+6 more)
typings/pyglet/: util (1).pyi
(+123 files in other folders)
