[metadata]
name = skullgirls_frame_data_parse
description = A parser for Skullgirls frame data
author = Micah Bradbury
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules
[options]
packages = skug_fd_parse
install_requires =
    pandas
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
for_testing =
    pytest
    pytest-cov
    mypy
    black
    flake8
    isort
    pre-commit
    tox

[options.package_data]
skug_fd_parse = py.typed

[flake8]