[metadata]
name = Skullgirls Frame Data Parser
description = A parser for Skullgirls frame data
author = Micah Bradbury
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
[options]
packages = skug_fd_parse
python_requires = >=3.7
package_dir =
    =src
zip_safe = false
install_requires =
    pandas>=2.0.0
[options.extras_require]
tests =
    pytest>=7.3
    pytest-cov>=4
    mypy>=1.2
    black>=23.3
    flake8>=6.0.0
    tox>=4.5.1
    pandas>=2.0.1

[options.package_data]
skug_fd_parse = py.typed