[metadata]
name = skombo
description = Skullgirls combo utils/program
author = Micah Bradbury (Aeiry)
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop

[options]
packages = 
    skombo
install_requires = 
    requests>=2
python_requires = >=3.9
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6
    pytest-cov>=2
    mypy>=0.9
    flake8>=3.9
    tox>=3.24

[options.package_data]
skombo = py.typed

